glib2.0 (2.23.3-2) UNRELEASED; urgency=low

  * debian/patches/05-dont-fail-a-couple-of-tests-when-running-as-root.patch:
    - Added, expect a couple of tests that play with file permissions
      to succeed when running as root.
  * debian/control.in:
    - Add desktop-file-utils to build depends to fix another test.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sat, 20 Feb 2010 10:26:32 +0100

glib2.0 (2.23.3-1) experimental; urgency=low

  * New upstream development release:
    + debian/rules,
      debian/libglib2.0-0.symbols:
      - Updated for the new API.

 -- Sebastian Dröge <slomo@debian.org>  Tue, 09 Feb 2010 16:48:07 +0100

glib2.0 (2.23.2-2) experimental; urgency=low

  * debian/control.in,
    debian/libglib2.0-0.triggers,
    debian/libglib2.0-0.install,
    debian/libglib2.0-dev.install:
    + Ship gio-querymodules in the shared library package
      and triggers calls to every time /usr/lib/gio/modules
      is touched by a package.

 -- Sebastian Dröge <slomo@debian.org>  Tue, 26 Jan 2010 09:40:47 +0100

glib2.0 (2.23.2-1) experimental; urgency=low

  * New upstream development release:
    + debian/rules,
      debian/libglib2.0-0.symbols:
      - Updated for the new API.

 -- Sebastian Dröge <slomo@debian.org>  Tue, 26 Jan 2010 08:14:26 +0100

glib2.0 (2.23.1-1) experimental; urgency=low

  [ Sebastian Dröge ]
  * debian/control.in:
    + Let the -dev package depend on zlib1g-dev as it's required by
      the pkg-config file now.

  [ Emilio Pozuelo Monfort ]
  * New upstream release.
    + debian/rules,
      debian/libglib2.0-0.symbols:
      - Updated for the new API.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Tue, 22 Dec 2009 23:25:41 +0100

glib2.0 (2.23.0-1) experimental; urgency=low

  [ Loïc Minier ]
  * -refdbg package is section/prio debug/extra.
  * Add note to NOT use -Wl,--as-needed as it might drop a critical -lpthread
    link in gio (which dlopen()s gvfs); see
    mid:<1257999019.21780.15.camel@marzipan>.
